Rimossi margini inutili e miglioramento delle animazioni

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <!-- Inizio sezione informazioni generali -->
         <div class="row mt-6 justify-content-around container-body-site" id="animazioneNumeri">
-            <div class="col-xl-5 col-lg-5 col-md-5 col-11 d-flex justify-content-center">
+            <div class="col-xl-5 col-lg-5 col-md-5 col-11">
                 <div class="row mb-4">
                     <h2 data-aos-offset="110" data-aos="zoom-in">Cosa posso fare per le tue esigenze</h2>
                     <p class="mt-3 testo-body mb-5" data-aos-offset="10" data-aos="zoom-in">
@@ -172,11 +172,11 @@
                 </div>
             </div>
 
-            <div class="col-xl-5 col-lg-5 col-md-5 col-11 d-flex justify-content-center">
+            <div class="col-xl-5 col-lg-5 col-md-5 col-11">
                 <div class="row justify-content-center align-items-center container-vislualizzatore-progetti">
                     <div class="col-12" data-aos="fade-right" data-aos-offset="110" data-aos-easing="ease-in-sine">
                         <div class="row sottolinea-progetti">
-                            <div class="col-8 d-flex justify-content-start align-items-center descrizione-progetto">
+                            <div class="col-8 d-flex justify-content-start align-items-center tog-mp">
                                 <img src="./img/Immagine_SitoWeb.jpg" alt="immagine siti" height="90px" width="130" class="img-thumbnail">
 
                                 <div>
@@ -185,8 +185,8 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 justify-content-start align-items-center ml-4">
-                                <div class="d-flex justify-content-end align-items-center">
+                            <div class="col-4 justify-content-start tog-mp">
+                                <div class="d-flex justify-content-end">
                                     <a href="./index.html#zona-progetti" class="freccia-proj" onclick="carica_progetti('sw')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
                                     </a>
@@ -197,7 +197,7 @@
 
                     <div class="col-12" data-aos="fade-right" data-aos-offset="110" data-aos-easing="ease-in-sine">
                         <div class="row sottolinea-progetti">
-                            <div class="col-8 d-flex justify-content-start align-items-center descrizione-progetto">
+                            <div class="col-8 d-flex justify-content-start align-items-center tog-mp">
                                 <img src="./img/Immagine_WebApp.jpg" alt="immagine web app" height="90px" width="130" class="img-thumbnail">
 
                                 <div>
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 justify-content-start align-items-center ml-4">
+                            <div class="col-4 justify-content-start tog-mp">
                                 <div class="d-flex justify-content-end align-items-center">
                                     <a href="./index.html#zona-progetti" class="freccia-proj" onclick="carica_progetti('wa')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
@@ -218,7 +218,7 @@
 
                     <div class="col-12" data-aos="fade-right" data-aos-offset="110" data-aos-easing="ease-in-sine">
                         <div class="row sottolinea-progetti">
-                            <div class="col-8 d-flex justify-content-start align-items-center descrizione-progetto">
+                            <div class="col-8 d-flex justify-content-start align-items-center tog-mp">
                                 <img src="./img/Immagine_Python.jpg" alt="immagine python" height="90px" width="130" class="img-thumbnail">
 
                                 <div>
@@ -227,7 +227,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 justify-content-start align-items-center ml-4">
+                            <div class="col-4 justify-content-start tog-mp">
                                 <div class="d-flex justify-content-end align-items-center">
                                     <a href="./index.html#zona-progetti" class="freccia-proj" onclick="carica_progetti('ap')">
                                         <svg class="centra-freccia-proj" height="25" width="30" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" stroke-linejoin="round" stroke-linecap="round"></path></svg>
@@ -500,7 +500,7 @@
             <div class="col-xl-5 col-lg-5 col-md-5 col-11 tog-mp d-flex justify-content-center">
                 <div>
                     <h2 class="sotto-titolo">Le mie conoscenze</h2>
-                    <p>
+                    <p class="taj">
                         Le mie competenze includono una vasta gamma di linguaggi e tecnologie, 
                         tra cui: C, Python, Bash, HTML, JavaScript, PHP, Bootstrap, React, MongoDb, SQL, Firebase,
                         Github, Gitlab, B4J, B4A, Java, Json, XML, NodeJS, Linux e utilizzo di API. Inoltre, ho esperienza nell'utilizzo 
@@ -512,7 +512,7 @@
             <div class="col-xl-5 col-lg-5 col-md-5 col-11 tog-mp d-flex justify-content-center">
                 <div>
                     <h2 class="sotto-titolo">La mia passione</h2>
-                    <p>
+                    <p class="taj">
                         Attraverso questo sito, intendo manifestare la profonda passione che nutro
                         per l'informatica, con l'obiettivo di arricchire l'esperienza dell'utente 
                         finale, donando spensieratezza e soddisfazione. Vi ringrazio sinceramente
