Ridotta grandezza colonna (da telefono)

--- a/index.html
+++ b/index.html
@@ -150,22 +150,22 @@
                         Non aspettare oltre per dare vita al tuo sito: mettiti in contatto ora!
                     </p>
 
-                    <div class="col-xl-5 col-lg-5 col-md-5 col-sm-6 col-12 sposta-sinistra" data-aos="zoom-in-right">
+                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 sposta-sinistra" data-aos="zoom-in-right">
                         <h5 class="titolo-body"><strong class="progetti-pubblicati-numero">0</strong>+</h5>
                         <p class="testo-body">Progetti pubblicati</p>
                     </div>
 
-                    <div class="col-xl-5 col-lg-5 col-md-5 col-sm-6 col-12 sposta-sinistra" data-aos="zoom-in-right">
+                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 sposta-sinistra" data-aos="zoom-in-right">
                         <h5 class="titolo-body"><strong class="progetti-sviluppati-numero">0</strong>+</h5>
                         <p class="testo-body">Progetti sviluppati</p>
                     </div>
 
-                    <div class="col-xl-5 col-lg-5 col-md-5 col-sm-6 col-12 sposta-sinistra" data-aos="zoom-in-right">
+                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 sposta-sinistra" data-aos="zoom-in-right">
                         <h5 class="titolo-body"><strong class="progetti-iconici-numero">0</strong>+</h5>
                         <p class="testo-body">I più iconici</p>
                     </div>
 
-                    <div class="col-xl-5 col-lg-5 col-md-5 col-sm-6 col-12 sposta-sinistra" data-aos="zoom-in-right">
+                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 sposta-sinistra" data-aos="zoom-in-right">
                         <h5 class="titolo-body"><strong class="progetti-webapp-numero">0</strong>+</h5>
                         <p class="testo-body">Web app</p>
                     </div>
