Migliorata grafica informazioni generali

--- a/index.html
+++ b/index.html
@@ -144,30 +144,46 @@
             <div class="col-xl-5 col-lg-5 col-md-5 col-11">
                 <div class="row mb-4">
                     <h2 data-aos-offset="110" data-aos="zoom-in">Cosa posso fare per le tue esigenze</h2>
-                    <p class="mt-3 testo-body mb-5" data-aos-offset="10" data-aos="zoom-in">
+                    <p class="mt-3 testo-body mb-5 taj" data-aos-offset="10" data-aos="zoom-in">
                         Opta per l'eccellenza, non per l'abbondanza. Scelgo di offrirti la 
                         massima qualità nei miei servizi a un prezzo straordinario.
                         Non aspettare oltre per dare vita al tuo sito: mettiti in contatto ora!
                     </p>
 
-                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 sposta-sinistra" data-aos="zoom-in-right">
-                        <h5 class="titolo-body"><strong class="progetti-pubblicati-numero">0</strong>+</h5>
-                        <p class="testo-body">Progetti pubblicati</p>
+                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 tog-mp" data-aos="zoom-in-right">
+                        <div>
+                            <h5 class="titolo-body">
+                                <strong class="progetti-webapp-numero">0</strong>+
+                            </h5>
+                            <p class="testo-body">Web app sviluppate</p>
+                        </div>
                     </div>
 
-                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 sposta-sinistra" data-aos="zoom-in-right">
-                        <h5 class="titolo-body"><strong class="progetti-sviluppati-numero">0</strong>+</h5>
-                        <p class="testo-body">Progetti sviluppati</p>
+                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 tog-mp flex-end-425" data-aos="zoom-in-right">
+                        <div>
+                            <h5 class="titolo-body">
+                                <strong class="progetti-sviluppati-numero">0</strong>+
+                            </h5>
+                            <p class="testo-body">Progetti sviluppati</p>
+                        </div>
                     </div>
 
-                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 sposta-sinistra" data-aos="zoom-in-right">
-                        <h5 class="titolo-body"><strong class="progetti-iconici-numero">0</strong>+</h5>
-                        <p class="testo-body">I più iconici</p>
+                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 tog-mp" data-aos="zoom-in-right">
+                        <div>
+                            <h5 class="titolo-body">
+                                <strong class="progetti-iconici-numero">0</strong>+
+                            </h5>
+                            <p class="testo-body">Progetti più iconici</p>
+                        </div>
                     </div>
 
-                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 sposta-sinistra" data-aos="zoom-in-right">
-                        <h5 class="titolo-body"><strong class="progetti-webapp-numero">0</strong>+</h5>
-                        <p class="testo-body">Web app</p>
+                    <div class="col-xl-5 col-lg-5 col-md-5 col-6 tog-mp flex-end-425" data-aos="zoom-in-right">
+                        <div>
+                            <h5 class="titolo-body">
+                                <strong class="progetti-pubblicati-numero">0</strong>+
+                            </h5>
+                            <p class="testo-body">Progetti pubblicati</p>
+                        </div>
                     </div>
                 </div>
             </div>
