--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid container-sito">
 
         <!-- Inizio navbar -->
         <div class="row mia-navbar fixed-top">
@@ -49,7 +49,7 @@
             </div>
 
             <div class="col-6 d-flex justify-content-end align-items-center visible-tel">
-                <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" onclick="apri_menu()">
+                <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" onclick="gestione_menu('apri')">
                 <label class="menu-open-button" for="menu-open">
                     <span class="lines line-1"></span>
                     <span class="lines line-2"></span>
@@ -59,9 +59,9 @@
         </div>
 
         <div class="row justify-content-center tipi-sezioni not-visible">
-            <div class="col-12 d-flex justify-content-start"><a class="pointer ml-2" href="./index.html#zona-about"><h5>About</h5></a></div>
-            <div class="col-12 d-flex justify-content-start"><a class="pointer ml-2" href="./index.html#zona-progetti"><h5>Progetti</h5></a></div>
-            <div class="col-12 d-flex justify-content-start"><a class="pointer ml-2" href="./index.html#zona-contatti"><h5>Contattami</h5></a></div>
+            <div class="col-12 d-flex justify-content-start"><a class="pointer ml-2" href="./index.html#zona-about" onclick="gestione_menu('chiudi')"><h5>About</h5></a></div>
+            <div class="col-12 d-flex justify-content-start"><a class="pointer ml-2" href="./index.html#zona-progetti" onclick="gestione_menu('chiudi')"><h5>Progetti</h5></a></div>
+            <div class="col-12 d-flex justify-content-start"><a class="pointer ml-2" href="./index.html#zona-contatti" onclick="gestione_menu('chiudi')"><h5>Contattami</h5></a></div>
             <div class="col-12 d-flex justify-content-start"><a class="pointer ml-2" href="https://www.instagram.com/alba_luca_/" target="_blank"><h5>Instagram</h5></a></div>
             <div class="col-12 d-flex justify-content-start"><a class="pointer ml-2" href="https://github.com/lucx-albx" target="_blank"><h5> Github</h5></a></div>
         </div>
@@ -250,6 +250,8 @@
                                     </a>
                                 </div>
                             </div>
+
+                            <div id="zona-about"></div>
                         </div>
                     </div>
                 </div>
@@ -264,7 +266,7 @@
             <div class="col-11">
                 <div class="row">
                     <div class="col-12 tog-mp">
-                        <h2 class="title-name" id="zona-about" data-aos-offset="100" data-aos="fade-down-right">About me</h2>
+                        <h2 class="title-name" data-aos-offset="100" data-aos="fade-down-right">About me</h2>
                         <p data-aos-offset="10" data-aos="fade-right" class="mia-descrizione testo-body">
                             Sono Alba Luca Francesco, nato il 19 luglio 2005 a Bietigheim-Bissingen, in Germania, ma 
                             di nazionalità italiana. A 18 anni, sono orgoglioso di condividere alcuni aspetti 
@@ -428,6 +430,8 @@
                                         </div>
                                     </div>
 
+                                    <div id="zona-progetti"></div>
+
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-12 mt-3">
                                         <div class="percentuale-frame">
                                             <div class="row">
@@ -457,7 +461,7 @@
         <!-- Inizio sezione progetti -->
         <div class="row justify-content-center mt-5" data-aos="fade-up">
             <div class="col-11 tog-mp">
-                <h2 class="title-name" id="zona-progetti" data-aos-offset="100" data-aos="fade-down-right">Progetti sviluppati</h2>
+                <h2 class="title-name" data-aos-offset="100" data-aos="fade-down-right">Progetti sviluppati</h2>
             </div>
 
             <div class="col-11 mt-4 blocco-skill-principali">
@@ -506,7 +510,7 @@
 
 
         <!-- INIZIO BOTTONE SCROLLA SU -->
-        <div id="scrollToTopBtn" onclick="scrollToTop()">&#8593;</div>
+        <div class="scrollTop hidden" id="scrollToTopBtn" onclick="scrollToTop()">&#8593;</div>
         <!-- FINE BOTTONE SCROLLA SU -->
 
 
